A bunch of UI updates and a script to fetch voicemails

--- a/_data/site.yml
+++ b/_data/site.yml
@@ -2,8 +2,8 @@ charset: utf-8
 locale: en_US
 
 title: After the Beep
-owner: Blaine Murphy
-copyright: 2022
+number: '+14426672337'
+owner: The Operator
 email: operator@afterthebeep.tel
 
 source_repo: https://gitlab.com/unixispower/after-the-beep
